add eslint config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:client": "webpack --config build/webpack.config.client.js",
     "build:server": "webpack --config build/webpack.config.server.js",
     "clear": "rimraf dist",
-    "build": "yarn clear && yarn build:client && yarn build:server"
+    "build": "yarn clear && yarn build:client && yarn build:server",
+    "lint":"eslint --ext .js --ext .jsx client/",
+    "precommit":"yarn lint"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +20,23 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-standard": "^4.0.1",
     "html-webpack-plugin": "^4.4.1",
     "http-proxy-middleware": "^1.0.5",
+    "husky": "^4.3.0",
     "memory-fs": "^0.5.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
