--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,6 +11,8 @@
   },
   "extends": "airbnb",
   "rules": {
-    "semi":[0]
+    "semi":[0],
+    "import/extensions":[0],
+    "react/jsx-filename-extension":[0]
   }
 }
