--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "http-server-request-handlers-empty-favicon": "^0.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "rimraf": "^3.0.2"
   }
 }
