--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  // "plugins": ["react-hot-loader/babel"]
+  "plugins": [[
+    "@babel/plugin-proposal-decorators",
+    {
+      "legacy": true
+    }
+  ],"@babel/plugin-proposal-class-properties"]
 }
