--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
+    "@babel/plugin-proposal-function-sent": "^7.10.4",
+    "@babel/plugin-proposal-json-strings": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-stage-1": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.9.0",
@@ -45,9 +55,14 @@
     "webpack-merge": "^5.1.4"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/preset-stage-0": "^7.8.3",
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "http-server-request-handlers-empty-favicon": "^0.1.1",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.3.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
