--- a/package.json
+++ b/package.json
@@ -58,11 +58,14 @@
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/preset-stage-0": "^7.8.3",
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "http-server-request-handlers-empty-favicon": "^0.1.1",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
