--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -14,6 +14,7 @@
     "semi":[0],
     "import/extensions":[0],
     "react/jsx-filename-extension":[0],
-    "react/require-default-props":[0]
+    "react/require-default-props":[0],
+    "import/named": [0]
   }
 }
