--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "nodemon server/server.js",
+    "dev:server": "nodemon cross-env NODE_ENV=development server/server.js",
     "build:client": "webpack --config build/webpack.config.client.js",
     "build:server": "webpack --config build/webpack.config.server.js",
     "clear": "rimraf dist",
     "build": "yarn clear && yarn build:client && yarn build:server",
     "lint": "eslint --ext .js --ext .jsx client/",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -59,6 +60,7 @@
     "@babel/preset-stage-0": "^7.8.3",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "http-server-request-handlers-empty-favicon": "^0.1.1",
@@ -67,9 +69,12 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
+    "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "serialize-javascript": "^5.0.1"
   }
 }
