--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
+    "ejs-compiled-loader": "^3.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "http-server-request-handlers-empty-favicon": "^0.1.1",
