--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/preset-stage-0": "^7.8.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
@@ -65,6 +67,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "http-server-request-handlers-empty-favicon": "^0.1.1",
+    "jss": "^10.4.0",
+    "jss-preset-default": "^10.4.0",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
     "prop-types": "^15.7.2",
@@ -73,6 +77,7 @@
     "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-jss": "^10.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "rimraf": "^3.0.2",
